# Project-Matador

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN-DECISIONS.md  Dockerfile  MASTER-PROMPT.md  PHASE-4-PLAN.md  PRE-BUILD-REVIEW.md  README.md  RESEARCH-KALSHI.md  config.example.yaml  docker-compose.yml  pyproject.toml
Research/: tennis_bot_spec.md  tennis_edge.py
matador/: alerts.py  backtest.py  bot.py  clv.py  config.py  edge.py  engine.py  names.py  sackmann.py  sharp.py  storage.py  tournament.py
matador/kalshi/: auth.py  client.py  market.py
matador/model/: artifact.py  calibration.py  elo.py  probability.py
reference/: tennis_edge.py
scripts/: backtest_calibration.py  backtest_vs_bookmaker.py  backtest_vs_kalshi.py  bot.py  build_ratings.py  clv_report.py  prepare_matches.py  probe.py  scan.py
tests/: conftest.py  test_alerts.py  test_artifact.py  test_auth.py  test_backtest.py  test_bot.py  test_calibration.py  test_clv.py  test_clv_report.py  test_config.py  test_edge.py  test_elo.py  test_engine.py  test_kalshi_client.py  test_launcher.py  test_names.py  test_orderbook.py  test_probability.py  test_resolver.py  test_sackmann.py  test_scan.py  test_sharp.py  test_storage.py  test_tournament.py
tests/fixtures/: events_atp.json  market_single_liquid.json  markets_atp_sample.json  markets_de_minaur_svajda.json  orderbook_liquid.json  resolver_case_dimitrov_berrettini.json
tests/fixtures/sackmann_data/tennis_atp/: atp_matches_2024.csv
