[project]
name = "matador"
version = "0.1.0"
description = "Personal tennis value-alert bot for Kalshi (signals only — no automated trading)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "python-telegram-bot>=21.9",  # 21.9+ allows httpx 0.28 (older pins would downgrade httpx and break the Kalshi client tests)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["matador*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
